Fix the header spacing (windows problem)

--- a/app/assets/stylesheets/_headers_from_future_juntos.scss
+++ b/app/assets/stylesheets/_headers_from_future_juntos.scss
@@ -49,7 +49,7 @@
   position: static;
   right: -73px;
   display: inline-block;
-  padding: 15px 10px 9px;
+  padding: 15px 8px 9px;
   /*border-radius: 4px;*/
   -webkit-transition: all 500ms ease;
   -o-transition: all 500ms ease;
